Mejoras graficas en layout
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 2 hours 39 minutes

--- a/app/src/main/res/layout/ad_mob_fragment_template.xml
+++ b/app/src/main/res/layout/ad_mob_fragment_template.xml
@@ -13,12 +13,12 @@
             android:id="@+id/tv_ad_attribution"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/ad_attribution"
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
-            android:text="Ad"
+            android:text="@string/ad"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +31,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="Icon ad app"
             app:layout_constraintVertical_bias="0.1" />
 
         <TextView
@@ -108,7 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center"
-            android:text="Ver más"
+            android:text="@string/ver_m_s"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/right_guide"
             app:layout_constraintStart_toStartOf="@+id/left_guide"
