--- a/app/src/main/res/layout/card_view_mapview.xml
+++ b/app/src/main/res/layout/card_view_mapview.xml
@@ -1,12 +1,6 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:elevation="4dp"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="4dp"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintTop_toTopOf="parent">
+    android:layout_height="match_parent">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_view"
