--- a/app/src/main/res/layout/card_view_quake_detail.xml
+++ b/app/src/main/res/layout/card_view_quake_detail.xml
@@ -4,115 +4,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view_detail"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="2dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toStartOf="@+id/right_guide"
-    app:layout_constraintHorizontal_bias="1.0"
-    app:layout_constraintStart_toStartOf="@+id/left_guide"
-    app:layout_constraintTop_toBottomOf="@+id/card_view_map"
-    app:layout_constraintVertical_bias="0.0"
-    card_view:cardCornerRadius="4dp">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/iv_mag_color_detail"
+            android:id="@+id/iv_mag_color"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/circulo_pintado"
-            android:src="@drawable/circle_shape"
-            android:transitionName="color_magnitud"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:srcCompat="@drawable/circle_shape" />
 
         <TextView
-            android:id="@+id/tv_ciudad_detail"
+            android:id="@+id/tv_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:fontFamily="sans-serif"
             android:maxLines="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textSize="14sp"
-            android:transitionName="ciudad"
-            app:layout_constraintStart_toEndOf="@id/iv_mag_color_detail"
-            app:layout_constraintTop_toTopOf="@+id/iv_mag_color_detail"
-            app:layout_constraintVertical_chainStyle="packed"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
+            card_view:layout_constraintStart_toEndOf="@id/iv_mag_color"
+            card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
             tools:text="Nombre Ciudad" />
 
+        <TextView
+            android:id="@+id/tv_hour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textAppearance="?attr/textAppearanceCaption"
+            card_view:layout_constraintBottom_toBottomOf="@+id/tv_city"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toTopOf="@+id/tv_city"
+            tools:text="XX D X h" />
+
+        <TextView
+            android:id="@+id/tv_reference"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="4dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingTop="0dp"
+            android:textAppearance="?attr/textAppearanceCaption"
+            card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="@+id/tv_city"
+            card_view:layout_constraintTop_toBottomOf="@+id/tv_city"
+            tools:text="Referencia de la ciudad" />
+
+
+        <TextView
+            android:id="@+id/tv_magnitude"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:maxLength="4"
+            android:textAppearance="?attr/textAppearanceHeadline5"
+            android:textColor="@android:color/white"
+            android:textStyle="normal"
+            card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
+            card_view:layout_constraintEnd_toEndOf="@+id/iv_mag_color"
+            card_view:layout_constraintStart_toStartOf="@+id/iv_mag_color"
+            card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
+            tools:text="9.5" />
+
         <ImageView
-            android:id="@+id/iv_sensible_detail"
+            android:id="@+id/iv_sensitive"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/icono_sensible"
             android:visibility="invisible"
-            card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad_detail"
-            card_view:layout_constraintEnd_toStartOf="@+id/tv_hora_detail"
+            card_view:layout_constraintBottom_toBottomOf="@+id/tv_city"
+            card_view:layout_constraintEnd_toStartOf="@+id/tv_hour"
             card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintStart_toEndOf="@+id/tv_ciudad_detail"
-            card_view:layout_constraintTop_toTopOf="@+id/tv_ciudad_detail"
+            card_view:layout_constraintStart_toEndOf="@+id/tv_city"
+            card_view:layout_constraintTop_toTopOf="@+id/tv_city"
             card_view:srcCompat="@drawable/ic_warning_black_24dp"
             tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/tv_hora_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginEnd="16dp"
-            android:fontFamily="sans-serif"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textSize="12sp"
-            android:transitionName="hora"
-            card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad_detail"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="@+id/tv_ciudad_detail"
-            tools:text="XX D X h" />
-
-        <TextView
-            android:id="@+id/tv_referencia_detail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="4dp"
-            android:ellipsize="end"
-            android:fontFamily="sans-serif"
-            android:maxLines="1"
-            android:paddingTop="0dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textSize="14sp"
-            android:transitionName="referencia"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_mag_color_detail"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/tv_ciudad_detail"
-            app:layout_constraintTop_toBottomOf="@+id/tv_ciudad_detail"
-            app:layout_constraintVertical_bias="0.0"
-            tools:text="Referencia de la ciudad" />
-
-
-        <TextView
-            android:id="@+id/tv_magnitud_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:maxLength="4"
-            android:textColor="@android:color/white"
-            android:textSize="21sp"
-            android:textStyle="normal"
-            android:transitionName="magnitud"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_mag_color_detail"
-            app:layout_constraintEnd_toEndOf="@+id/iv_mag_color_detail"
-            app:layout_constraintStart_toStartOf="@+id/iv_mag_color_detail"
-            app:layout_constraintTop_toTopOf="@+id/iv_mag_color_detail"
-            tools:text="9.5" />
 
         <ImageView
             android:id="@+id/iv_reloj"
@@ -123,18 +102,18 @@
             android:contentDescription="@string/icono_tiempo"
             android:src="@drawable/ic_date"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/separador" />
+            app:layout_constraintTop_toBottomOf="@+id/divider" />
 
         <View
-            android:id="@+id/separador"
+            android:id="@+id/divider"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:layout_marginTop="16dp"
             android:background="?attr/dividerHorizontal"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_mag_color_detail" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_mag_color" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/barrier"
@@ -150,11 +129,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/tiempo"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textSize="14sp"
+            android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintEnd_toStartOf="@+id/guia_vertical"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_reloj"
@@ -166,9 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:fontFamily="sans-serif"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textSize="14sp"
+            android:textAppearance="?attr/textAppearanceCaption"
             app:layout_constraintBottom_toTopOf="@+id/barrier"
             app:layout_constraintEnd_toStartOf="@+id/guia_vertical"
             app:layout_constraintHorizontal_bias="0.0"
@@ -194,10 +169,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:fontFamily="sans-serif"
             android:text="@string/distancia"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textSize="14sp"
+            android:textAppearance="?attr/textAppearanceBody2"
             android:visibility="visible"
             app:layout_constraintEnd_toStartOf="@+id/guia_vertical"
             app:layout_constraintHorizontal_bias="0.0"
@@ -210,9 +183,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:fontFamily="sans-serif"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textSize="14sp"
+            android:textAppearance="?attr/textAppearanceCaption"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guia_vertical"
@@ -240,7 +211,7 @@
             android:layout_marginTop="16dp"
             android:contentDescription="@string/icono_epicentro"
             app:layout_constraintStart_toStartOf="@+id/guia_vertical"
-            app:layout_constraintTop_toBottomOf="@+id/separador"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
             card_view:srcCompat="@drawable/ic_adjust_24dp" />
 
         <TextView
@@ -249,10 +220,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:fontFamily="sans-serif"
             android:text="@string/profundidad"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textSize="14sp"
+            android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_epicentro"
@@ -264,9 +233,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:fontFamily="sans-serif"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textSize="14sp"
+            android:textAppearance="?attr/textAppearanceCaption"
             app:layout_constraintBottom_toTopOf="@+id/barrier"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -292,10 +259,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:fontFamily="sans-serif"
             android:text="@string/escala"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textSize="14sp"
+            android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_escala"
@@ -307,9 +272,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:fontFamily="sans-serif"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textSize="14sp"
+            android:textAppearance="?attr/textAppearanceCaption"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_titulo_escala"
