--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="corner_radius_32dp">24dp</dimen>
+    <dimen name="corner_radius_16dp">16dp</dimen>
     <dimen name="corner_radius_8dp">8dp</dimen>
     <dimen name="corner_radius_4dp">4dp</dimen>
 </resources>
