--- a/app/src/main/res/values/shape.xml
+++ b/app/src/main/res/values/shape.xml
@@ -4,25 +4,25 @@
     <!--Shape Appearance for small components like chips, buttons, text fields and FABs-->
     <style name="ShapeAppearance.LastQuakeChile.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">@dimen/corner_radius_4dp</item>
+        <item name="cornerSize">@dimen/corner_radius_16dp</item>
     </style>
 
     <!--Shape Appearance for medium components like cards, alert dialogs-->
     <style name="ShapeAppearance.LastQuakeChile.MediumComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">@dimen/corner_radius_8dp</item>
+        <item name="cornerSize">@dimen/corner_radius_16dp</item>
     </style>
 
     <!--Shape Appearance for large components like side and bottom navigation drawers-->
     <style name="ShapeAppearance.LastQuakeChile.LargeComponent" parent="ShapeAppearance.MaterialComponents.LargeComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">@dimen/corner_radius_8dp</item>
+        <item name="cornerSize">@dimen/corner_radius_16dp</item>
     </style>
 
     <!-- Custom Card View Shape Appearance (ONLY CARDVIEW)-->
     <style name="ShapeAppearance.LastQuakeChile.CardView" parent="ShapeAppearance.MaterialComponents.MediumComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">@dimen/corner_radius_8dp</item>
+        <item name="cornerSize">@dimen/corner_radius_16dp</item>
     </style>
 
     <!-- Custom Button Shape Appearance (ONLY BUTTONS)-->
