Android lint y mejoras en archivo de strings
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 28 minutes

--- a/app/src/main/res/layout/ad_mob_fragment_template.xml
+++ b/app/src/main/res/layout/ad_mob_fragment_template.xml
@@ -31,7 +31,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="Icon ad app"
+            android:contentDescription="@string/icon_ad_app"
             app:layout_constraintVertical_bias="0.1" />
 
         <TextView
