--- a/app/src/main/res/layout/card_view_reports.xml
+++ b/app/src/main/res/layout/card_view_reports.xml
@@ -21,7 +21,7 @@
             android:contentDescription="@string/icono_reporte_mensual"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_report_24dp" />
+            app:srcCompat="@drawable/ic_round_analytics_24" />
 
         <TextView
             android:id="@+id/tv_title_report"
