--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:paddingBottom="30dp"
     tools:context=".reports_feature.ui.ReportsFragment">
 
     <androidx.constraintlayout.widget.Guideline
