Correcciones de layouts
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 38 minutes

--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -63,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="-16dp"
-        android:fitsSystemWindows="true"
+        android:paddingBottom="24dp"
         app:cardCornerRadius="24dp"
         app:cardElevation="4dp"
         app:layout_anchor="@id/app_bar"
