--- a/app/src/main/res/menu/menu_map_fragment.xml
+++ b/app/src/main/res/menu/menu_map_fragment.xml
@@ -11,5 +11,10 @@
         app:showAsAction="always|collapseActionView"
         tools:ignore="AlwaysShowAction" />
 
+    <item
+        android:id="@+id/settings_menu"
+        android:orderInCategory="1"
+        android:title="@string/settings"
+        app:showAsAction="never" />
 
 </menu>
