Indicador en el tab layout
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -21,7 +21,7 @@
             android:layout_height="200dp"
             android:fitsSystemWindows="true"
             app:expandedTitleGravity="bottom"
-            app:expandedTitleMarginBottom="?attr/actionBarSize"
+            app:expandedTitleMarginBottom="70dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
@@ -43,13 +43,15 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="8dp"
                 android:background="@android:color/transparent"
                 app:tabGravity="fill"
                 app:tabIconTint="@color/white"
-                app:tabIndicatorHeight="0dp"
+                app:tabIndicatorColor="@color/colorSecondary"
+                app:tabIndicatorGravity="top"
+                app:tabIndicatorHeight="2dp"
                 app:tabInlineLabel="true"
                 app:tabMode="scrollable"
                 app:tabSelectedTextColor="@color/white"
