--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,8 @@
 
     <color name="badgeGreen">#9A8BC34A</color>
 
+    <color name="tab_indicator_alpha">#80FFFFFF</color>
+
     <!-- Colores para cada magnitud-->
     <color name="magnitude1">#006400</color>
     <color name="magnitude2">#2a7900</color>
