--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -65,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="-16dp"
+        android:layout_marginBottom="-16dp"
         app:cardCornerRadius="24dp"
         app:cardElevation="4dp"
         app:layout_anchor="@id/app_bar"
