Limpieza de código y recursos que ya no son utilizados
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -53,7 +53,7 @@
                 app:tabIndicatorGravity="top"
                 app:tabIndicatorHeight="2dp"
                 app:tabInlineLabel="true"
-                app:tabMode="scrollable"
+                app:tabMode="auto"
                 app:tabSelectedTextColor="@color/white"
                 app:tabTextColor="@color/grey_dark" />
 
