--- a/app/src/main/res/layout/fragment_quake.xml
+++ b/app/src/main/res/layout/fragment_quake.xml
@@ -28,26 +28,16 @@
             app:layout_constraintGuide_end="8dp"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <include
-            android:id="@+id/include"
-            layout="@layout/card_view_information"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            ads:layout_constraintEnd_toStartOf="@+id/right_guide"
-            ads:layout_constraintStart_toStartOf="@+id/left_guide"
-            ads:layout_constraintTop_toTopOf="parent" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycle_view_quakes"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:contentDescription="@string/seccion_listado_de_sismos"
             ads:layout_constraintBottom_toBottomOf="parent"
+            ads:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include"
             tools:listitem="@layout/card_view_quake" />
 
         <ProgressBar
