Se corrige el manejo de errores cuando no hay caché almacenado
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/fragment_ad_mob.xml
+++ b/app/src/main/res/layout/fragment_ad_mob.xml
@@ -50,8 +50,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
-        android:id="@+id/include_no_wifi"
-        layout="@layout/no_wifi"
+        android:id="@+id/include_error_message"
+        layout="@layout/error_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:visibility="gone"
