--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -9,6 +9,7 @@
         android:id="@+id/map_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingBottom="16dp"
         map:cameraBearing="0"
         map:cameraTilt="45"
         map:layout_constraintBottom_toBottomOf="parent"
