--- a/app/src/main/res/layout/fragment_quake.xml
+++ b/app/src/main/res/layout/fragment_quake.xml
@@ -13,8 +13,9 @@
 
         <TextView
             android:id="@+id/tv_cache_copy"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:paddingTop="8dp"
             android:paddingBottom="4dp"
             android:text="@string/copia_local"
