correcciones de lint
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/fragment_ad_mob.xml
+++ b/app/src/main/res/layout/fragment_ad_mob.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/desliza_izq"
+        android:text="@string/swipe_left"
         android:textSize="12sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/iv_swipe_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/icono_desliza_izquierda"
+        android:contentDescription="@string/swipe_left_icon"
         app:layout_constraintBottom_toBottomOf="@+id/tv_swipe_to_quakes_1"
         app:layout_constraintStart_toEndOf="@+id/tv_swipe_to_quakes_1"
         app:layout_constraintTop_toTopOf="@+id/tv_swipe_to_quakes_1"
