--- a/app/src/main/res/layout/fragment_quake.xml
+++ b/app/src/main/res/layout/fragment_quake.xml
@@ -18,7 +18,7 @@
             android:gravity="center"
             android:paddingTop="8dp"
             android:paddingBottom="4dp"
-            android:text="@string/copia_local"
+            android:text="@string/local_copy"
             android:textSize="12sp"
             android:textStyle="italic"
             android:visibility="gone"
